# egtts

./: .gitignore  BENCHMARK_COMPARISON.md  COMMIT_PLAN.md  M15_SUMMARY.md  MILESTONE4_REPORT.md  PLAN.md  README.md  REFACTORING_SUMMARY.md  proof_of_efficiency.py  pyproject.toml
docs/: BIRD_VES_METHODOLOGY.md  BIRD_VES_RESULTS.md  EGSQL_FAILURE_ANALYSIS.md  M15_MAKER.md  M5_THRESHOLD_ANALYSIS.md  ONBOARDING.md  VISUALIZATION.md
egtts/: __init__.py  database.py  guided.py  model.py  schema.py
egtts/scripts/: __init__.py  analyze_failures.py  calculate_rves.py  convert_to_official_format.py  download_bird.py  run_bird_ves.py  run_official_evaluation.sh  setup_official_eval.py
scripts/: analyze_failures.py  analyze_failures_with_beams.py  benchmark.py  calculate_efficiency_delta.py  calculate_rves.py  check.py  convert_to_official_format.py  create_gold.py  download_bird.py  eval_official.py  find_optimization_examples.py  format_predictions.py  milestone1_validation.py  milestone2_evaluation.py  milestone3_schema_guidance.py  milestone4_efficiency_guidance.py  run_bird_m15.py  run_bird_ves.py  setup_official_eval.py  test_pipeline.py  test_steering_100.py  visualize_steering.py
scripts/archive/: analyze_regression.py  compare_baseline_m4.py  evaluate_m5_thresholds.py  milestone2_beam_search.py  milestone4_efficiency_guidance.py  run_bird_full.py  run_spider_full.py  test_m5_100.py  test_m5_threshold.py
src/egtts/: __init__.py  cfg_sql.py  data.py  database.py  eg_cfg.py  example_bank.py  few_shot.py  guided.py  maker.py  model.py  plans.py  prompts.py  schema.py  (+3 more)
